Closed
Bug 666869
Opened 15 years ago
Closed 15 years ago
Crash [@ nsGlobalWindow::GetPerformance]
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
mozilla7
People
(Reporter: jruderman, Assigned: mounir)
References
Details
(Keywords: crash, regression, testcase)
Attachments
(4 files, 1 obsolete file)
|
295 bytes,
text/html
|
Details | |
|
10.06 KB,
text/plain
|
Details | |
|
865 bytes,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
|
1.75 KB,
patch
|
Details | Diff | Splinter Review |
No description provided.
| Reporter | ||
Comment 1•15 years ago
|
||
| Assignee | ||
Updated•15 years ago
|
OS: Mac OS X → All
Hardware: x86_64 → All
| Assignee | ||
Comment 2•15 years ago
|
||
Assignee: nobody → mounir.lamouri
Status: NEW → ASSIGNED
Attachment #541644 -
Flags: review?(Olli.Pettay)
Comment 3•15 years ago
|
||
Thanks for report and fix. Here's the same fix with added mochitest
| Assignee | ||
Comment 4•15 years ago
|
||
(In reply to comment #3)
> Created attachment 541663 [details] [diff] [review] [review]
> Simple fix with test
>
> Thanks for report and fix. Here's the same fix with added mochitest
You don't need a mochitest. I was planning to attach Jesse's testcase as a crashtest.
| Assignee | ||
Comment 5•15 years ago
|
||
(In reply to comment #4)
> You don't need a mochitest. I was planning to attach Jesse's testcase as a
> crashtest.
By attach I mean push.
| Reporter | ||
Comment 6•15 years ago
|
||
OTOH, maybe it's good to have it as a mochitest for the
ok(frameWin.performance==null, 'Performance for non-existing frame???');
Updated•15 years ago
|
Attachment #541644 -
Flags: review?(Olli.Pettay) → review+
| Assignee | ||
Comment 7•15 years ago
|
||
Pushed to mozilla-inbound with the crashtest.
Igor, can you write a patch that adds the test mentioned in comment 6 to the current performance test suite?
Flags: in-testsuite+
Whiteboard: [inbound]
| Assignee | ||
Comment 8•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla7
Comment 9•15 years ago
|
||
I had this test as part of the previous patch. There is not much of test suite yet, and the existing test covers basic scenario, so mixing this test in doesn't feel right to me.
Attachment #541663 -
Attachment is obsolete: true
Comment 10•14 years ago
|
||
Verified fixed on:
Mozilla/5.0 (Windows NT 6.1; rv:7.0) Gecko/20100101 Firefox/7.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:7.0) Gecko/20100101 Firefox/7.0
Mozilla/5.0 (X11; Linux i686; rv:7.0) Gecko/20100101 Firefox/7.0
Mozilla/5.0 (Windows NT 5.1; rv:7.0) Gecko/20100101 Firefox/7.0
I loaded the test case from the description on the above builds and none of them crashed. There were no other issues either.
Status: RESOLVED → VERIFIED
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•