Bug 666869 - Crash [@ nsGlobalWindow::GetPerformance]. r=smaug